# ksef_pyth

./: .gitignore  CLAUDE.md  README.md  pyproject,toml  pyproject.toml  release.md  requirements.txt  test.py
.github/workflows/: publish.yml  python-package.yml
ksef/: __init__.py  test.py
ksef/konwdocs/: konwxml.py
ksef/pattern/: request.xml
ksef/sdk/: __init__.py  authksef.py  encrypt.py  httphook.py  konwdokument.py  ksefsdk.py  xades_sign.py  xades_sign_1.py
ksef/tests/: test1.py
ksef/tests/testdata/: FA_3_Przykład_9_pattern.xml
sample/: test.py
tests/: konwdokument.py  test1.py  test_mix.py
tests/testabstract/: testabstract.py
tests/testdata/: FA_3_Przykład_zakup_25.xml  FA_3_Przykład_zakup_8.xml  keyStore.p12
tests/testsuite/: test1.py  test2.py
tests/worktemp/: faktura.xml
